--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -2,7 +2,7 @@ $global--layout-breakpoint-small: 700px;
 $global--font-weigt--normal: 300;
 $global--font-weigt--bold: 600;
 $global--animate-scale: 1.05;
-$global--bordering-radius: 0.25em;
+$global--bordering-radius: 1em;
 $global--bordering-size: 3.5px;
 $global--margin: 1em;
 $global--margin--hovering-title: 0 2em -0.5em 2em;
